--- a/app/views/producer/home/new.html.erb
+++ b/app/views/producer/home/new.html.erb
@@ -1,30 +1,15 @@
-<div class="uk-cover-container" uk-height-viewport>
-  <img src="<%= asset_path 'registration/registration-cover2.jpg' %>" alt="cover" uk-cover>
-  <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle cover-text-container">
+<div class="uk-container uk-padding">
+    <h2 class="title"><%= t('producer.new.welcome') %></h2>
 
-    <div class="uk-container">
-      <h2 class="uk-text-center"><%= t('producer.new.Welcome') %></h2>
+    <%= simple_form_for(@user, url: createproducer_path) do |f| %>
 
-    </div>
-    <div class="uk-align-center uk-flex uk-flex-center">
-      <div class="uk-width-large">
+      <%= f.input :first_name, required: true, autofocus: true %>
+      <%= f.input :last_name, required: true, autofocus: true %>
+      <%= f.input :bio, label: "Veuillez renseigner une description", input_html: {class: "uk-textarea textarea", rows: "5"}, input_class: false %>
 
 
-        <div class="uk-container">
-          <%= simple_form_for(@user, url: createproducer_path) do |f| %>
-
-            <%= f.input :first_name, required: true, autofocus: true %>
-            <%= f.input :last_name, required: true, autofocus: true %>
-            <%= f.input :bio, label: "Veuillez renseigner une description", input_html: {class: "uk-textarea textarea", rows: "5"}, input_class: false %>
-
-
-            <div class="uk-margin-medium">
-              <%= f.button :submit, "Valider", class: 'uk-width-1-1 button-sign-in' %>
-            </div>
-          <% end %>
-
-        </div>
+      <div class="uk-margin-medium">
+        <%= f.button :submit, "Valider", class: 'uk-width-1-1 button-sign-in' %>
       </div>
-    </div>
-  </div>
+    <% end %>
 </div>
