--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,51 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-  <h1><%= t("recipe.title.index") %></h1>
-  <% if flash[:success] %>
-    <div class="uk-alert-success" uk-alert>
-      <a class="uk-alert-close" uk-close></a>
-      <p><%= flash[:success] %></p>
-    </div>
-  <% end %>
-
-  <tbody>
-  <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m uk-grid-match uk-padding" uk-grid>
-    <% @recipes.each do |recipe| %>
-      <div>
-        <div class="uk-card uk-card-default">
-          <div class="uk-card-media-top uk-text-center uk-display-block uk-height-medium ">
-            <div class="uk-margin-top uk-align-center">
-              <% if recipe.image.attached? %>
-                <%= image_tag(recipe.image.variant(resize: '300x400')) %>
-              <% else %>
-                <%= image_tag("https://pngimage.net/wp-content/uploads/2018/06/not-found-png-3.png") %>
-              <% end %>
+  <div class="uk-container uk-padding">
+    <h2 class="title"><%= t("recipe.title.index") %></h2>
+    <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m" uk-grid>
+      <% @recipes.each do |recipe| %>
+        <div>
+            <div class="uk-card uk-card-default">
+                <div class="uk-card-media-top">
+                    <% if recipe.image.attached? %>
+                        <%= image_tag recipe.image, :crop => :fill %>
+                    <% else %>
+                        <%= image_tag "https://picsum.photos/400/200" %>
+                    <% end %>
+                </div>
+                <div class="uk-card-body">
+                    <h3 class="uk-card-title"><%= recipe.title %></h3>
+                    <div class="star-ratings star-dark">
+                        <div class="star-ratings-value" style="width: <%= recipe.score * 20 %>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                    </div>
+                    <p class="uk-text-truncate"><%= recipe.description %></p>
+                    <div class="info-recipe">
+                      <span class="name">Difficulté</span>
+                      <progress class="uk-progress" value=<%= recipe.difficulty %> max="10"></progress>
+                    </div>
+                </div>
+                <div class="uk-card-footer">
+                    <%= link_to t("recipe.action.show"), recipe, class: "uk-button uk-button-text" %>
+                </div>
             </div>
-          </div>
-          <div class="uk-card-body">
-            <h3 class="uk-card-title">
-              <%= recipe.title %>
-              <span class="uk-label uk-label-<%= ("success" if recipe.score > 7) || ("warning" if recipe.score > 5) || "danger" %>"><%= recipe.score %>
-                / 10</span>
-            </h3>
-            <div class="uk-child-width-5-2@s">
-              <p class="uk-text-truncate"> <%= recipe.description %></p>
-            </div>
-            <div class="info-recipe">
-              <span class="name">Difficulté</span>
-              <progress class="uk-progress" value=<%= recipe.difficulty %> max="10"></progress>
-            </div>
-          </div>
-          <div class="uk-card-footer uk-text-center">
-            <p class="uk-button uk-button-default"><%= link_to t("recipe.action.show"), recipe %></p>
-            <!--          <p class="uk-button uk-button-default"><%#= link_to t("recipe.action.edit"), edit_recipe_path(recipe) %></p>-->
-            <!--          <p class="uk-button uk-button-default uk-margin-small-top"> <%#= link_to t("recipe.action.destroy"), recipe, method: :delete, data: {confirm: t("recipe.action.confirm")} %></p>-->
-          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-  </tbody>
-
-<!--<span class="uk-button uk-button-default uk-align-center"><%#= link_to t("recipe.action.new"), new_recipe_path %>-->
-<!--</span>-->
+</div>
