--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,19 +1,12 @@
 <div class="">
-  <div class="">
-    <h2 class="uk-text-center"><%= t("recipe.title.new") %></h2>
+  <div class="uk-padding">
+    <h2 class="uk-text-center title"><%= t("recipe.title.new") %></h2>
 
-    <% if flash[:danger] %>
-      <% flash[:danger].values.each do |value| %>
-        <div class="uk-alert-danger" uk-alert>
-          <a class="uk-alert-close" uk-close></a>
-          <div class="alert alert"><%= value[0] %></div>
-        </div>
-      <% end %>
-    <% end %>
+    <%= render 'form', recipe: @recipe %>
 
-<%= render 'form', recipe: @recipe %>
-
-<%= link_to t("recipe.action.back"), recipes_path %>
+    <div class="uk-container">
+      <%= link_to t("recipe.action.back"), recipes_path %>
+    </div>
 
   </div>
 </div>
