--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,39 +1,45 @@
-<nav class="uk-navbar-container" uk-navbar>
-  <div class="uk-navbar-left">
-
-    <%= link_to unauthenticated_cook_root_path, class: 'uk-navbar-item uk-logo' do %>
-      <%= image_tag "landing/logo.png", class: 'uk-img', height: '150', width: '150'%>
-  <% end %>
-
-    <ul class="uk-navbar-nav"></ul>
-  </div>
-
+<nav class="uk-navbar-container navbar-recipy" uk-navbar="mode: click">
+  <%= link_to 'Recipy', unauthenticated_cook_root_path, class: 'uk-navbar-item uk-logo' %>
   <div class="uk-navbar-right">
-    <ul class="uk-navbar-nav">
-      <li><%= link_to t('navbar.producer'), unauthenticated_producer_root_path%></li>
-
+    <ul class="uk-navbar-nav uk-visible@s">
+      <li class="<%= current_page_class?(search_path) %>"><%= link_to t('search.title'), search_path %></li>
+      <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>"><%= link_to t('navbar.producers'), unauthenticated_producer_root_path %></li>
+      <li class="<%= current_page_class?(point_of_sales_path) %>"><%= link_to t('navbar.point_of_sales'), point_of_sales_path %></li>
       <% if user_signed_in? %>
         <li>
-        <a><%= t('navbar.my_profil') %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2"/></a>
-        <div class="uk-navbar-dropdown">
-          <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li><%= link_to t('navbar.my_user_profil'), edit_user_registration_path%></li>
-            <% if current_user.isProducer == true %>
-              <li><%= link_to t('navbar.my_producer_profil'), show_producer_path(current_user.id)%></li>
-            <% end %>
-          </ul>
-        </div>
-        </li>
-        <li><%= link_to "Carnets", notebooks_path, :class => "uk-navbar-nav" %></li>
-        <li>
-          <a><%= current_user.email %><span class="uk-icon" uk-icon="icon: chevron-down; ratio: 2"/></a>
-          <div class="uk-navbar-dropdown">
+          <a href="#">
+            <%= current_user.email %>
+            <span class="uk-icon uk-margin-small-left" uk-icon="icon: chevron-down"></span>  
+          </a>
+          <div class="uk-navbar-dropdown uk-navbar-dropdown-width-2">
             <ul class="uk-nav uk-navbar-dropdown-nav">
-              <li>
-                <%= link_to my_recipes_path, method: :get do %>
-                  <span class="uk-margin-small-right" uk-icon="icon: user"></span><%= t('recipe.my_recipes.link') %>
+              <li class="<%= current_page_class?(my_recipes_path) %>">
+                <%= link_to my_recipes_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: file-text"></span><%= t('navbar.my_recipes') %>
                 <% end %>
               </li>
+              <li class="<%= current_page_class?(notebooks_path) %>">
+                <%= link_to notebooks_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= t('navbar.notebooks') %>
+                <% end %>
+              </li>
+              <li class="<%= current_page_class?(shopping_lists_path) %>">
+                <%= link_to shopping_lists_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= t('navbar.courses') %>
+                <% end %>
+              </li>
+              <li class="<%= current_page_class?(edit_user_registration_path) %>">
+                <%= link_to edit_user_registration_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: pencil"></span><%= t('navbar.edit_user') %>
+                <% end %>
+              </li>
+              <% if current_user.isProducer == true %>
+                <li class="<%= current_page_class?(show_producer_path(current_user.id)) %>">
+                  <%= link_to show_producer_path(current_user.id) do %>
+                    <span class="uk-margin-small-right" uk-icon="icon: user"></span><%=  t('navbar.my_producer_profile') %>
+                  <% end %>
+                </li>
+              <% end %>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
                   <span class="uk-margin-small-right" uk-icon="icon: sign-out"></span><%= t('navbar.log_out') %>
@@ -43,9 +49,65 @@
           </div>
         </li>
       <% else %>
-        <li><%= link_to t('navbar.sign_up'), new_user_registration_path %></li>
-        <li><%= link_to t('navbar.sign_in'), new_user_session_path %></li>
+        <li class="<%= current_page_class?(new_user_session_path) %>"><%= link_to t('navbar.sign_in'), new_user_session_path %></li>
+      <% end %>
+    </ul>
+    <div class="uk-hidden@s">
+      <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#" uk-toggle="target: #offcanvas-nav"></a>
+    </div>
+  </div>
+</nav>
+
+<div id="offcanvas-nav" uk-offcanvas="overlay: true">
+  <div class="uk-offcanvas-bar">
+    <button class="uk-offcanvas-close" type="button" uk-close></button>
+    <h3>Navigation</h3>
+    <ul class="uk-nav uk-nav-default">
+      <li class="<%= current_page_class?(search_path) %>"><%= link_to t('search.title'), search_path %></li>
+      <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>"><%= link_to t('navbar.producers'), unauthenticated_producer_root_path %></li>
+      <li class="<%= current_page_class?(point_of_sales_path) %>"><%= link_to t('navbar.point_of_sales'), point_of_sales_path %></li>
+      <% if user_signed_in? %>
+        <li class="uk-parent">
+            <a href="#"><%= current_user.email %></a>
+            <ul class="uk-nav-sub">
+              <li class="<%= current_page_class?(my_recipes_path) %>">
+                <%= link_to my_recipes_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: file-text"></span><%= t('navbar.my_recipes') %>
+                <% end %>
+              </li>
+              <li class="<%= current_page_class?(notebooks_path) %>">
+                <%= link_to notebooks_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: folder"></span><%= t('navbar.notebooks') %>
+                <% end %>
+              </li>
+              <li class="<%= current_page_class?(shopping_lists_path) %>">
+                <%= link_to shopping_lists_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: cart"></span><%= t('navbar.courses') %>
+                <% end %>
+              </li>
+              <li class="<%= current_page_class?(edit_user_registration_path) %>">
+                <%= link_to edit_user_registration_path do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: pencil"></span><%= t('navbar.edit_user') %>
+                <% end %>
+              </li>
+              <% if current_user.isProducer == true %>
+                <li class="<%= current_page_class?(show_producer_path(current_user.id)) %>">
+                  <%= link_to show_producer_path(current_user.id) do %>
+                    <span class="uk-margin-small-right" uk-icon="icon: user"></span><%=  t('navbar.my_producer_profile') %>
+                  <% end %>
+                </li>
+              <% end %>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                  <span class="uk-margin-small-right" uk-icon="icon: sign-out"></span><%= t('navbar.log_out') %>
+                <% end %>
+              </li>
+            </ul>
+        </li>
+      <% else %>
+        <li class="<%= current_page_class?(new_user_session_path) %>"><%= link_to t('navbar.sign_in'), new_user_session_path %></li>
       <% end %>
     </ul>
   </div>
-</nav>
+</div>
+
