--- a/app/views/shopping_lists/new.html.erb
+++ b/app/views/shopping_lists/new.html.erb
@@ -1,21 +1,9 @@
-<tbody>
-<div class="uk-position-center">
-  <div class="uk-width-xxlarge">
-    <h2 class="uk-text-center">Nouvelle liste de courses</h2>
-
-    <% if flash[:danger] %>
-      <div class="uk-alert-danger" uk-alert>
-        <a class="uk-alert-close" uk-close></a>
-        <p><%= flash[:danger] %></p>
-      </div>
-    <% end %>
+<div class="uk-container uk-padding">
+  <div class="uk-width-xxlarge uk-align-center">
+    <h2 class="title">Nouvelle liste de courses</h2>
 
     <%= render 'form', shopping_list: @shopping_list %>
 
-    <%= link_to 'Revenir à mes listes', shopping_lists_path %>
-
+    <%= link_to t('shopping_list.go_back'), shopping_lists_path %>
   </div>
 </div>
-<tbody>
-
-
