--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<div class="uk-position-center">
-  <div class="uk-width-large">
-    <h2 class="uk-text-center"><%= t('.forgot_your_password') %></h2>
+<div class="uk-container uk-padding">
+  <div class="uk-width-large uk-align-center">
+    <h2 class="uk-text-center title"><%= t('.forgot_your_password') %></h2>
 
     <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name)) do |f| %>
       <%= f.input :email, required: true, autofocus: true %>
