--- a/app/views/point_of_sales/_index.html.erb
+++ b/app/views/point_of_sales/_index.html.erb
@@ -1,48 +1,34 @@
-<div class="uk-container">
-<p id="notice"><%= notice %></p>
+<div class="uk-section uk-section-secondary uk-light">
+  <div class="uk-container">
+    <h3 class="title"><%= t('point_of_sale.title') %></h3>
+  
+    <table class="uk-table uk-table-divider">
+      <thead>
+        <tr>
+          <th><%= t('point_of_sale.name') %></th>
+          <th><%= t('point_of_sale.desc') %></th>
+          <th><%= t('point_of_sale.market_type') %></th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<% if flash[:danger] %>
-  <div class="uk-alert-danger" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
-    <p><%= flash[:danger] %></p>
-  </div>
-<%end %>
-
-  <div class="uk-flex uk-flex-center">
-    <h1>Point Of Sales</h1>
-  </div>
-  <div class="uk-flex uk-flex-center">
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Market Type</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @user.point_of_sales.each do |point_of_sale| %>
-      <tr>
-        <td><%= point_of_sale.name %></td>
-        <td><%= point_of_sale.description %></td>
-        <td><%= point_of_sale.market_type %></td>
-          <td><%= link_to 'Show', point_of_sale %></td>
-          <% if current_user && current_user.id == @user.id %>
-      <td><%= link_to 'Edit', edit_point_of_sale_path(point_of_sale) %></td>
-          <td><%= link_to 'Destroy', point_of_sale, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-         <% end %>
-      </tr>
+      <tbody>
+        <% @user.point_of_sales.each do |point_of_sale| %>
+          <tr>
+            <td><%= point_of_sale.name %></td>
+            <td><%= point_of_sale.description %></td>
+            <td><%= point_of_sale.market_type %></td>
+            <td><%= link_to t('point_of_sale.show'), point_of_sale %></td>
+            <% if current_user && current_user.id == @user.id %>
+              <td><%= link_to t('point_of_sale.edit'), edit_point_of_sale_path(point_of_sale) %></td>
+              <td><%= link_to t('point_of_sale.delete'), point_of_sale, method: :delete, data: { confirm: 'Êtes vous sûr ?' } %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% if current_user && current_user.id == @user.id %>
+      <%= link_to t('point_of_sale.add'), new_point_of_sale_path, class: "uk-button uk-button-default" %>
     <% end %>
-  </tbody>
-</table>
   </div>
-
-<br>
-<% if current_user && current_user.id == @user.id %>
-  <%= link_to 'Nouveau point de vente', new_point_of_sale_path %>
-  <%= link_to 'Nouveau produit', new_product_path %>
-<% end %>
 </div>
