--- a/app/views/point_of_sales/_openning_hours_edit_fields.html.erb
+++ b/app/views/point_of_sales/_openning_hours_edit_fields.html.erb
@@ -3,18 +3,18 @@
     <div class=" uk-grid">
         <%= f.simple_fields_for :openning_hours do |ff| %>
           <div class="uk-width-1-1">
-            <%= f.input :day, label: 'Day' %>
+            <%= f.input :day, label: t('point_of_sale.day') %>
           </div>
           <div class="uk-width-1-2">
-            <%= f.input :open, label: 'Open hour' %>
+            <%= f.input :open, label: t('point_of_sale.open_hour') %>
           </div>
           <div class="uk-width-1-2">
-            <%= f.input :close, label: 'Close hour' %>
+            <%= f.input :close, label: t('point_of_sale.close_hour') %>
           </div>
         <% end %>
     </div>
     <div class="uk-text-center uk-margin-medium-top">
-      <h4 class="uk-margin-remove"><%= link_to_remove_association "delete", f, class: "uk-link" %></h4>
+      <h4 class="uk-margin-remove"><%= link_to_remove_association t('point_of_sale.remove'), f, class: "uk-link" %></h4>
     </div>
   </div>
 </div>
