--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -10,7 +10,7 @@
   <%= f.input :ingredient, collection: Ingredient.all.map {|v| [v.name, v.id]}.to_a,
               as: :select, :include_blank => false, :label => t("ingredient.label") %>
 
-  <%= f.association :point_of_sales, as: :check_boxes, :label => t("point_of_sale.label"),
+  <%= f.association :point_of_sales, as: :check_boxes, :label => t("point_of_sale.title"),
                     input_html: {class: 'uk-checkbox uk-margin-left'},
                     collection: PointOfSale.where(user: current_user).includes(:address).all.map {|t|
                       [t.name + " (" + t.address.entilted + " / " + t.address.city + ")", t.id]} %>
@@ -23,6 +23,6 @@
   <% end %>
 
   <div class="uk-margin-medium">
-    <%= f.button :submit %>
+    <%= f.button :submit, "Valider" %>
   </div>
 <% end %>
