--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,16 +1,5 @@
-<h1><%= t("products.edit_title") %></h1>
+<div class="uk-container uk-padding">
+  <h1 class="title"><%= t("products.edit_title") %></h1>
 
-<% if flash[:success] %>
-  <div class="uk-alert-success" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
-    <p><%= flash[:success] %></p>
-  </div>
-<% end %>
-<% if flash[:danger] %>
-  <div class="uk-alert-danger" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
-    <p><%= flash[:danger] %></p>
-  </div>
-<% end %>
-
-<%= render 'form_edit', product: @product %>
+  <%= render 'form_edit', product: @product %>
+</div>
