--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,18 +1,7 @@
-<h1><%= t("products.title") %></h1>
+<div class="uk-container uk-padding">
+  <h1 class="title"><%= t("products.title") %></h1>
 
-<% if flash[:success] %>
-  <div class="uk-alert-success" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
-    <p><%= flash[:success] %></p>
-  </div>
-<% end %>
-<% if flash[:danger] %>
-  <div class="uk-alert-danger" uk-alert>
-    <a class="uk-alert-close" uk-close></a>
-    <p><%= flash[:danger] %></p>
-  </div>
-<% end %>
+  <%= render 'form_new', product: @product %>
 
-<%= render 'form_new', product: @product %>
-
-<%= link_to t("recipe.action.back"), show_producer_path(current_user.id) %>
+  <%= link_to t("recipe.action.back"), show_producer_path(current_user.id) %>
+</div>
