--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,3 @@
-<%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.18.7/slimselect.min.css' %>
 <%= stylesheet_link_tag 'search' %>
 
 <%= simple_form_for :search,
@@ -24,6 +23,7 @@
     <%= f.input :sort, :label => t("search.sort_by"), :prompt => t("search.sort_by"), :selected => @sort, collection: @sort_possibilities, as: :select, input_html: { class: 'uk-select' }, wrapper_class: "uk-width-1-4@s", :label_method => lambda { |el| t "search.sort.#{el.first}" } %>
 <% end %>
 <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m uk-padding" uk-grid>
+    <p class="uk-text-small uk-width-1-1"><%= @recipes.uniq.count %> résultats trouvés</p>
     <% if (@recipes.uniq.count > 0) %>
         <% @recipes.each do |recipe| %>
             <div>
@@ -36,7 +36,11 @@
                         <% end %>
                     </div>
                     <div class="uk-card-body">
-                        <h3 class="uk-card-title"><%= recipe.title %> <span class="uk-label uk-label-warning"><%= recipe.score %> / 5</span></h3>
+                        <h3 class="uk-card-title"><%= recipe.title %></h3>
+                        <div class="star-ratings star-dark">
+                            <div class="star-ratings-value" style="width: <%= recipe.score * 20 %>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+                            <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+                        </div>
                         <p><%= truncate recipe.description, length: 42, separator: /\w+/ %></p>
                         <div class="info-recipe">
                             <span class="name"><%= t("recipe.title.difficulty") %> (<%= recipe.difficulty %> / 10)</span>
@@ -79,14 +83,3 @@
     <% end %>
 </ul>
 <% end %>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.18.7/slimselect.min.js"></script>
-<script>
-new SlimSelect({
-  select: '#ingredients-select',
-  searchingText: 'Recherche...',
-  searchText: "Désolé il n'y a pas votre ingrédient dans la liste.",
-  searchPlaceholder: 'Recherche ingrédient',
-  placeholder: 'Ingrédients'
-})
-</script>
